RESOLVED FIXED275148
[GTK] MouseEvent movementX/Y incorrect with USE_GTK4=OFF
https://bugs.webkit.org/show_bug.cgi?id=275148
Summary [GTK] MouseEvent movementX/Y incorrect with USE_GTK4=OFF
Roope Salmi
Reported 2024-06-05 04:14:09 PDT
Created attachment 471586 [details] HTML demonstrating the issue Ubuntu 22.04.4 Either: - WebKitGTK 2.44.0-0ubuntu0.22.04.1 - Local build @ webkitgtk-2.45.2 with -DUSE_GTK4=OFF This HTML (attached), opened in MiniBrowser or Epiphany: <script> document.addEventListener("mousemove", (e) => { document.body.innerText = `${e.screenX} ${e.screenY} ${e.movementX} ${e.movementY}`; }); </script> always shows the same values for screenX & movementX, as well as screenY & movementY respectively. E.g.: 464 291 464 291 491 200 491 200 1152 556 1152 556 movementX/Y should be delta values from the previous event to the current one, but instead they are the same absolute values as screenX/Y. Works correctly when compiled with -DUSE_GTK4=ON.
Attachments
HTML demonstrating the issue (165 bytes, text/html)
2024-06-05 04:14 PDT, Roope Salmi
no flags
Carlos Garcia Campos
Comment 1 2024-06-17 02:52:36 PDT
EWS
Comment 2 2024-06-18 00:31:06 PDT
Committed 280110@main (763d3dd18daf): <https://commits.webkit.org/280110@main> Reviewed commits have been landed. Closing PR #29892 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.