Cherry-pick 280110@main (763d3dd18daf). https://bugs.webkit.org/show_bug.cgi?id=275148

[GTK] MouseEvent movementX/Y incorrect with USE_GTK4=OFF
    https://bugs.webkit.org/show_bug.cgi?id=275148

    Reviewed by Michael Catanzaro.

    Fix the creation of MotionEvent when created with a widget and state.

    * Source/WebKit/UIProcess/API/gtk/WebKitWebViewBase.cpp:
    (MotionEvent::MotionEvent):
    (MotionEvent::setState):

    Canonical link: https://commits.webkit.org/280110@main

Canonical link: https://commits.webkit.org/274313.360@webkitglib/2.44